# Project-Starter

./: CMakeLists.txt  README.md
etc/: etc.qrc  text_type_extensions.txt
include/: main_window.hpp
init/: pjs.ini
lib/browse_textbox/: CMakeLists.txt
lib/browse_textbox/include/: browse_textbox.hpp
lib/browse_textbox/src/: browse_textbox.cpp
lib/browse_textbox/test/: CMakeLists.txt  main.cpp
lib/browse_textbox/ui/: browse_textbox.ui
lib/pro_name_list/: CMakeLists.txt
lib/pro_name_list/include/: pro_name_list.hpp
lib/pro_name_list/src/: pro_name_list.cpp
lib/pro_name_list/test/: CMakeLists.txt  main.cpp
lib/pro_name_list/ui/: pro_name_list.ui
lib/progress_bar/: CMakeLists.txt
lib/progress_bar/include/: progress_bar.hpp
lib/progress_bar/src/: progress_bar.cpp
lib/progress_bar/test/: CMakeLists.txt  main.cpp
lib/progress_bar/ui/: progress_bar.ui
lib/relpace_view/: CMakeLists.txt
lib/relpace_view/include/: relpace_view.hpp
lib/relpace_view/src/: relpace_view.cpp
lib/relpace_view/test/: CMakeLists.txt  main.cpp
lib/relpace_view/ui/: relpace_view.ui
lib/setting_dialog/: CMakeLists.txt
lib/setting_dialog/include/: setting_dialog.hpp
lib/setting_dialog/lib/browse_textbox_setting_dialog/: CMakeLists.txt
lib/setting_dialog/lib/browse_textbox_setting_dialog/include/: browse_textbox_setting_dialog.hpp
lib/setting_dialog/lib/browse_textbox_setting_dialog/src/: browse_textbox_setting_dialog.cpp
lib/setting_dialog/lib/browse_textbox_setting_dialog/test/: CMakeLists.txt  main.cpp
lib/setting_dialog/lib/browse_textbox_setting_dialog/ui/: browse_textbox_setting_dialog.ui
lib/setting_dialog/src/: setting_dialog.cpp
lib/setting_dialog/test/: CMakeLists.txt  main.cpp
lib/setting_dialog/ui/: setting_dialog.ui
src/: logic.cpp  main.cpp  main_window.cpp  slots.cpp  special.cpp
ui/: main_window.ui
wizard/C++:簡易環境/: CMakeLists.txt  main.cpp
wizard/Qt_Widget:カスタムウィジェット/: CMakeLists.txt
wizard/Qt_Widget:カスタムウィジェット/Qt_Widget:簡易環境/: CMakeLists.txt  main.cpp
wizard/Qt_Widget:カスタムウィジェット/include/: __$project_name$__.hpp
wizard/Qt_Widget:カスタムウィジェット/src/: __$project_name$__.cpp
wizard/Qt_Widget:カスタムウィジェット/test/: CMakeLists.txt  main.cpp
wizard/Qt_Widget:カスタムウィジェット/ui/: __$project_name$__.ui
wizard/Qt_Widget:カスタムダイアログ/: CMakeLists.txt
wizard/Qt_Widget:カスタムダイアログ/include/: __$project_name$__.hpp
wizard/Qt_Widget:カスタムダイアログ/src/: __$project_name$__.cpp
wizard/Qt_Widget:カスタムダイアログ/test/: CMakeLists.txt  main.cpp
wizard/Qt_Widget:カスタムダイアログ/ui/: __$project_name$__.ui
wizard/Qt_Widget:サブクラス/: CMakeLists.txt
wizard/Qt_Widget:サブクラス/include/: __$project_name$__.hpp
wizard/Qt_Widget:サブクラス/src/: __$project_name$__.cpp
wizard/Qt_Widget:サブクラス/test/: CMakeLists.txt  main.cpp
wizard/Qt_Widget:メインウィンドウ/: CMakeLists.txt
wizard/Qt_Widget:メインウィンドウ/include/: __$project_name$__.hpp
wizard/Qt_Widget:メインウィンドウ/src/: __$project_name$__.cpp  main.cpp
wizard/Qt_Widget:メインウィンドウ/ui/: __$project_name$__.ui
wizard/Qt_Widget:簡易環境/: CMakeLists.txt
